src/test/ui/more-test-cases-1.stderr
error: macros cannot use qualified paths
  --> $DIR/more-test-cases-1.rs:3:5
   |
LL |     <() as module>::mac!();
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

